css/style.css
/* ... */
.portfolio_item .portfolio_item_hover .item_info {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    padding: 10px;
    width: 100%;
    font-weight: bold;
}

.portfolio_item .portfolio_item_hover .item_info span {
    display: block;
    color: #fff;
    font-size: 18px;
    -webkit-transform: translateY(-100px);
    transform: translateY(-100px);
    -webkit-transition: all .3s ease-in-out .3s;
    transition: all .3s ease-in-out .3s;
    opacity: 0;
}

.portfolio_item .portfolio_item_hover .item_info em {
    font-style: normal;
    display: inline-block;
    background-color: #425BB5;
    padding: 5px 20px;
    color: #fff;
    margin-top: 10px;
    -webkit-transform: translateY(100px);
    transform: translateY(100px);
    -webkit-transition: all .3s ease-in-out .3s;
    transition: all .3s ease-in-out .3s;
    opacity: 0;
    font-size: 10px;
    letter-spacing: 2px;
}

.portfolio_item:hover .portfolio_item_hover {
    opacity: 1;
    -webkit-transform: translateX(0);
    transform: translateX(0);
}

.portfolio_item:hover .item_info em,
.portfolio_item:hover .item_info span {
    opacity: 1;
    -webkit-transform: translateX(0);
    transform: translateX(0);
}

.portfolio .categories-grid .categories ul li {
    float: left;
}

.portfolio .categories-grid .categories ul li a {
    padding: 0 10px;
    -webkit-transition: all .2s ease-in-out .2s;
    transition: all .2s ease-in-out .2s;
}

.portfolio_filter {
    padding-left: 0;
    display: inline-block;
    margin: 0 auto;
    text-align: center;
}

.portfolio_item img {
    -webkit-filter: grayscale(10%);
    filter: grayscale(10%);
    vertical-align: center;
}

.portfolio-padding {
    padding: 20px 0;
}

.portfolio_container {
    display: flex;
}

.portfolio-inner {
    padding-bottom: 0 !important;
    padding-top: 25px;
}

.modal-content {
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0);
    border: none;
}

.popup-modal {
    background: #fff;
    width: 60%;
}

.close-popup-modal {
    float: right;
    margin: 20px;
    font-size: 22px;
    opacity: 0;
    cursor: pointer;
    -webkit-transition: all .3s;
    transition: all .3s;
    -webkit-transition-delay: .6s;
    transition-delay: .6s;
    position: fixed;
    z-index: 100000;
    right: 14px;

}

.close-popup-modal2 {
    float: right;
    margin: 20px;
    font-size: 22px;
    opacity: 0;
    cursor: pointer;
    -webkit-transition: all .3s;
    transition: all .3s;
    -webkit-transition-delay: .6s;
    transition-delay: .6s;
    position: fixed;
    z-index: 100000;
    right: 14px;

}
.animatedModal-on .close-popup-modal {
    opacity: 1;
}

.animatedModal-on .close-popup-modal2 {
    opacity: 1;
}
.modal-content h2 {
    font-family: 'Playfair Display', serif;
    font-size: 40px;
    line-height: 50px;
}


.research_topics{
    margin-top: 35px;
}

@media (max-width: 1125px) {
    .portfolio_container{
        display: flex;
        flex-direction: column;
    }

    .research_topics{
        margin: auto;
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}

/* publications
==================================================*/

img.publication{
    width: 100px;
    height: 100px;


}

img.publication0{
    width: 200px;
    height: 100px;


}
img.publication1{
    width: 210px;
    height: 100px;
    background-image: url('../img/publications/Fig4.jpg');

}
img.publication2{
    width: 210px;
    height: 100px;
    background-image: url("../img/publications/Fig5.png");

}
img.publication3{
    width: 210px;
    height: 100px;
    background-image: url("../img/publications/Fig6.png");

}
img.publication4{
    width: 210px;
    height: 100px;
    background-image: url("img/publications/fig7.png");

}


.public_img{
    float:right;
    height: 100px;
}

.public_text{
    float:left;
    vertical-align: center;
    height: 100px;
}

@media screen and (max-width: 992px) {
    .public_text{
      float:left;
      vertical-align: center;
      height: auto;
    }

}

@media screen and (max-width: 600px) {
    .public_text{
      float:left;
      vertical-align: center;
      height: auto;
    }

}

/* students2
==================================================*/


.public_text_students{
    float:left;
    vertical-align: center;
    height: auto;
}

.public_text_students_long{
    float:left;
    vertical-align: center;
    height: auto;
}

.public_text_students_extralong{
    float:left;
    vertical-align: center;
    height: auto;
}

/* footer
==================================================*/
.footer{
    background: rgb(100, 99, 99);
    margin-top: 40px;
    padding-top: 20px;
}


/* contact
==================================================*/

#contact {
    padding: 100px 0;
    background: #f3f3f3
}

#contact-form input,
#contact-form textarea {
    height: 50px;
    margin-bottom: 10px;
    border-radius: 0;
}

#contact-form label {
    display: block;
    margin-bottom: .2em;
    font-size: 13px;
    line-height: 13px;
    font-size: 1.3rem;
    line-height: 1.3rem;
    color: #000;
}

#contact-form label.error {
    margin-top: 10px;
    margin-bottom: 1em;
    font-size: 12px;
    line-height: 12px;
    font-size: 1.2rem;
    line-height: 1.2rem;
    color: #D33E43;
    margin-left: 10px
}
/* ... */

